--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
         </div>
       </div>
       <p class="paragraph">
-        Model 3 comes with the option of dual motor all-wheel drive, 20” Überturbine Wheels and Performance Brakes for
-        total control in all weather conditions. A carbon fiber spoiler improves stability at high speeds, all allowing
-        Model 3 to accelerate from 0-60 mph* in as little as 3.1 seconds.
+        Tesla All-Wheel Drive has two independent motors for improved redundancy, each with only one moving part for
+        minimal maintenance and maximum durability. Unlike traditional all-wheel drive systems, they digitally control
+        torque to the front and rear wheels for far better handling and traction control.
       </p>
     </section>
   </section>
