--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
       <img
         src="https://tesla-cdn.thron.com/delivery/public/image/tesla/ea753653-02a2-4206-aac5-82a33a0a245d/bvlatuR/std/2880x1800/model-3-hero-a-desktop"
         alt="car" />
+      <div class="bottom-arrow-btn2">
+        <a href="#performance" class="bottom-btn__link2"><i class="fa-solid fa-angle-down"></i></a>
+      </div>
     </div>
+
     <aside class="safety-article">
       <header class="safety-article__header">
         <h3 class="article-small-header">Safety</h3>
@@ -107,6 +111,7 @@
       </div>
     </aside>
   </section>
+
   <!-- Performance section -->
   <section id="performance">
     <div class="performace__badges">
@@ -119,6 +124,9 @@
           mph* in as little as 3.1 seconds
         </p>
 
+      </div>
+      <div class="bottom-arrow-btn2">
+        <a href="#all-wheel-drive" class="bottom-btn__link2"><i class="fa-solid fa-angle-down"></i></a>
       </div>
       <div class="badge">
         <h3>162 mph</h3>
