--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
     </div>
   </header>
-  <!-- Safety Section -->
+  <!--------------------------------------------------------------------- Safety Section --------------------------------------------------------------------->
   <section id="safety">
     <div class="safety__car-image">
       <img
@@ -112,7 +112,7 @@
     </aside>
   </section>
 
-  <!-- Performance section -->
+  <!------------------------------------------------------------------- Performance section ------------------------------------------------------------------->
   <section id="performance">
     <div class="performace__badges">
       <div class="badge">
@@ -169,7 +169,7 @@
       </p>
     </section>
   </section>
-  <!-- All-Wheel drive-->
+  <!--------------------------------------------------------------------- All-Wheel drive --------------------------------------------------------------------->
   <section id="all-wheel-drive">
     <div class="all-wheel-drive__badges">
       <div class="badge">
@@ -221,5 +221,4 @@
     </section>
   </section>
 </body>
-
 </html>
